--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <input type="text" name="form1_input" placeholder="input message" />
     <button name="form1_button">Submit</button>
   </form>
+  <button id="send-location">Send Location</button>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/chat.js"></script>
 </body>
